# socoban

./: .gitignore  CMakeLists.txt
include/: board.hpp  fields.hpp  man.hpp  score.hpp  show.hpp
src/: board.cpp  fields.cpp  main.cpp  man.cpp  score.cpp  show.cpp
